@@ -13,7 +13,8 @@
     moved refresh to after home/default on left toolbar
     remove unused ptk_file_browser_open_folder_as_root (uninit var warning suse)
     fixed build warnings for openSUSE OBS system
-    
+    added support for xdg-su and gnomesu
+    corrected problem copying plugins
 0.7.2   2012-03-05:
     exec function redesign (single script, noexec /tmp ok, ktsuss2 support,
         added /usr/bin/spacefm-auth)
